# MI-Learning

./: .gitignore  README.md  backtest.ps1  backtest_viz.html  backtest_viz.py  download_dukascopy.py  evaluate_performance.py  live_dashboard.py  requirements-train.txt  run_full_pipeline.ps1  start_live.ps1  train_offline.py
archive/: sequential_check.py
calendar/: parser.py
docs/: BUILD.md
mql5/: AutoTradeEA.mq5  ExportBars.mq5  XAUUSD_Meta.mq5
rust_signal_server/: Cargo.toml
rust_signal_server/src/: actor.rs  indicators.rs  main.rs  regime.rs  scatter.rs  tda.rs
synthetic_pretrain/: export_actor.py  generate.py  train_dsac.py
